[gd_scene load_steps=2 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://game/ui/hud_controller.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="TopLeftPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 150.0

[node name="HealthLabel" type="Label" parent="TopLeftPanel"]
layout_mode = 2
text = "Health: 100 / 100"
label_settings = SubResource("LabelSettings_health")

[node name="HealthBar" type="ProgressBar" parent="TopLeftPanel"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="DepthLabel" type="Label" parent="TopLeftPanel"]
layout_mode = 2
text = "Depth: Surface (0m)"
label_settings = SubResource("LabelSettings_depth")

[node name="BiomeLabel" type="Label" parent="TopLeftPanel"]
layout_mode = 2
text = "Biome: Plains"
label_settings = SubResource("LabelSettings_biome")

[node name="TopRightPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="FPSLabel" type="Label" parent="TopRightPanel"]
layout_mode = 2
text = "FPS: 60"
horizontal_alignment = 2

[node name="ChunksLabel" type="Label" parent="TopRightPanel"]
layout_mode = 2
text = "Chunks Loaded: 0"
horizontal_alignment = 2

[node name="CenterPanel" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Label" parent="CenterPanel"]
layout_mode = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
